@@ -2,7 +2,6 @@ package pack.entity;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import jakarta.persistence.*;
 import lombok.*;
@@ -27,15 +26,13 @@ public class Actor {
     @Builder.Default
     private List<Character> characters = new ArrayList<>();
 
-    public ActorDto toDto() {
+    public static ActorDto toDto(Actor entity) {
         return ActorDto.builder()
-                .no(this.no)
-                .name(this.name)
-                .pic(this.pic)
-                .characters(this.characters != null ? 
-                    this.characters.stream()
-                                    .map(Character::toDto) // Convert each Character to CharacterDto
-                                    .collect(Collectors.toList()) : null)
+                .no(entity.getNo())
+                .name(entity.getName())
+                .pic(entity.getPic())
+                .characterNo(entity.getCharacters().stream().map(Character::getNo).toList())
+//                .characters(entity.getCharacters().stream().map(Character::toDto).collect(Collectors.toList()))
                 .build();
     }
 }
